--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                 max-width: 100%;
                 height: 25rem;
             }
+
+        }
+
+        .cat-pics {
+            display: flex;
+            justify-content: center;
+            gap: 1em;
+            margin-top: 2em;
         }
 
         .flex {
@@ -52,11 +60,13 @@
         <p>Cats are cute and fluffy!</p>
         <p>As well as being cute, they are also very independent animals.</p>
         <p>for more info, click the pic.</p>
-        <ul>
-            <a href="https://henrik8772.github.io/CatHub/">
-                <img src="catfrontpic.jpg" alt="catss">
-            </a>
-        </ul>
+        <div class="cat-pics">
+            <ul>
+                <a href="https://henrik8772.github.io/CatHub/">
+                    <img src="catfrontpic.jpg" alt="catss">
+                </a>
+            </ul>
+        </div>
     </main>
 </body>
 
