--- a/index.html
+++ b/index.html
@@ -32,19 +32,23 @@
             max-width: 60rem;
             margin-inline: auto;
             text-align: center;
-
-            img {
-                max-width: 100%;
-                height: 25rem;
-            }
-
         }
+
+        img {
+            display: inline-block;
+            margin: 20px auto;
+            max-width: 300px;
+            border-radius: 10px;
+        }
+
+
 
         .cat-pics {
             display: flex;
-            justify-content: center;
-            gap: 1em;
-            margin-top: 2em;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 960px;
+            margin: 0 auto;
         }
 
         .flex {
